feat: modify layout

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,6 +20,8 @@ a {
 #__next {
   overflow-x: unset !important;
   height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 @keyframes rotate {
