--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
+/* 衬线字体 */
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 
 html,
 body {
